syntax = "proto3";
package delivery;
import "delivery/getData.proto";
  
service Service {
	rpc GetData(GetDataRequest) returns (GetDataResponse);
}
